# obsidian-engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  SystemLibs.cmake  ThirdParty.cmake
apps/editor/: CMakeLists.txt
apps/editor/include/editor/: data.hpp  editor_windows.hpp
apps/editor/include/obsidian/editor/: data.hpp  editor_windows.hpp  item_list_data_source.hpp  settings.hpp
apps/editor/src/: editor_windows.cpp  main.cpp  settings.cpp
apps/sample_project_generator/: CMakeLists.txt
apps/sample_project_generator/src/: main.cpp
assets/shaders/: CMakeLists.txt
assets/shaders/src/built-in/: default-pbr.frag  default-pbr.vert  default-unlit.frag  default-unlit.vert  default.frag  default.vert  depth-only.vert  post-processing.frag  post-processing.vert  ssao.frag  ssao.vert  water.frag  water.vert
assets/shaders/src/built-in/include/: blend.glsl  blinn-phong-lighting.glsl  camera.glsl  environment-maps.glsl  global-settings.glsl  lighting.frag  lighting.glsl  lit-material.glsl  material.frag  material.glsl  pbr-lighting.glsl  pbr-material.glsl  renderpass-data.glsl  ssao.frag  ssao.glsl  timer.glsl  unlit-material.glsl
libs/: CMakeLists.txt
libs/asset/: CMakeLists.txt
libs/asset/include/asset/: asset.hpp  asset_info.hpp  asset_io.hpp  mesh_asset_info.hpp  texture_asset_info.hpp
libs/asset/include/obsidian/asset/: asset.hpp  asset_io.hpp  material_asset_info.hpp  mesh_asset_info.hpp  prefab_asset_info.hpp  scene_asset_info.hpp  shader_asset_info.hpp  texture_asset_info.hpp  utility.hpp
libs/asset/src/: asset.cpp  asset_info.cpp  asset_io.cpp  material_asset_info.cpp  mesh_asset_info.cpp  prefab_asset_info.cpp  scene_asset_info.cpp  shader_asset_info.cpp  texture_asset_info.cpp  utility.cpp
libs/asset_converter/: CMakeLists.txt
libs/asset_converter/include/asset_converter/: asset_converter.hpp
libs/asset_converter/include/obsidian/asset_converter/: asset_converter.hpp  asset_converter_helpers.hpp  helpers.hpp  vertex_content_info.hpp
libs/asset_converter/src/: asset_converter.cpp  asset_converter_helpers.cpp  helpers.cpp
libs/core/: CMakeLists.txt
libs/core/include/core/: keycode.hpp  logging.hpp
libs/core/include/obsidian/core/: keycode.hpp  light_types.hpp  logging.hpp  material.hpp  shader.hpp  shapes.hpp  texture_format.hpp  vertex_type.hpp
libs/core/src/: texture_format.cpp
libs/core/src/utils/: aabb.cpp  path_utils.cpp  texture_utils.cpp
libs/core/test/: test_texture_utils.cpp
libs/globals/: CMakeLists.txt
libs/globals/include/obsidian/globals/: file_extensions.hpp
libs/input/: CMakeLists.txt
libs/input/include/input/: input_context.hpp  key_input_emitter.hpp  mouse_motion_emitter.hpp  window_event_emitter.hpp
libs/input/include/obsidian/input/: input_context.hpp  key_input_emitter.hpp  mouse_event_emitter.hpp
libs/input/src/: key_input_emitter.cpp  mouse_event_emitter.cpp  mouse_motion_emitter.cpp  window_event_emitter.cpp
libs/obsidian_engine/: CMakeLists.txt
libs/obsidian_engine/include/obsidian/obsidian_engine/: obsidian_engine.hpp
libs/obsidian_engine/include/obsidian_engine/: obsidian_engine.hpp
libs/obsidian_engine/src/: obsidian_engine.cpp
libs/platform/: CMakeLists.txt
libs/platform/include/obsidian/platform/: environment.hpp
libs/platform/src/: environment.cpp
libs/project/: CMakeLists.txt
libs/project/include/obsidian/project/: project.hpp
libs/project/src/: project.cpp
libs/renderdoc/: CMakeLists.txt
libs/renderdoc/src/: renderdoc.cpp
libs/rhi/: CMakeLists.txt
libs/rhi/include/obsidian/rhi/: resource_rhi.hpp  rhi.hpp  submit_types_rhi.hpp
libs/rhi/include/rhi/: rhi.hpp
libs/rhi/src/: resource_rhi.cpp  rhi.cpp
libs/rhi_vk/: CMakeLists.txt
libs/rhi_vk/include/rhi_vk/: vk_deletion_queue.hpp  vk_descriptors.hpp  vk_engine.hpp  vk_initializers.hpp  vk_mesh.hpp  vk_pipeline_builder.hpp  vk_types.hpp
libs/rhi_vk/src/: vk_descriptors.cpp  vk_engine.cpp  vk_engine_cleanup.cpp  vk_engine_draw.cpp  vk_engine_init.cpp  vk_engine_input_handling.cpp  vk_initializers.cpp  vk_mesh.cpp  vk_pipeline_builder.cpp
libs/runtime_resource/: CMakeLists.txt
libs/runtime_resource/include/obsidian/runtime_resource/: runtime_resource.hpp  runtime_resource_loader.hpp  runtime_resource_manager.hpp
libs/runtime_resource/src/: runtime_resource.cpp  runtime_resource_loader.cpp  runtime_resource_manager.cpp
libs/scene/: CMakeLists.txt
libs/scene/include/obsidian/scene/: camera.hpp  game_object.hpp  scene.hpp  serialization.hpp
libs/scene/include/scene/: scene.hpp
libs/scene/src/: camera.cpp  game_object.cpp  scene.cpp  serialization.cpp
libs/sdl_wrapper/: CMakeLists.txt
libs/sdl_wrapper/include/obsidian/sdl_wrapper/: sdl_backend.hpp  sdl_window_backend.hpp
libs/sdl_wrapper/include/sdl_wrapper/: sdl_backend.hpp  sdl_window_backend.hpp
libs/sdl_wrapper/src/: sdl_backend.cpp  sdl_window_backend.cpp
libs/serialization/: CMakeLists.txt
libs/serialization/include/obsidian/serialization/: game_object_data_serialization.hpp  scene_data_serialization.hpp  (+1 more)
libs/serialization/src/: game_object_data_serialization.cpp  scene_data_serialization.cpp
libs/task/: CMakeLists.txt
libs/task/src/: flow_builder.cpp  task.cpp  task_executor.cpp
libs/task/test/: test_task.cpp  test_task_executor.cpp
libs/vk_rhi/: CMakeLists.txt
libs/vk_rhi/include/vk_rhi/: vk_check.hpp  vk_deletion_queue.hpp  vk_descriptors.hpp  vk_engine.hpp  vk_initializers.hpp  vk_mesh.hpp  vk_pipeline_builder.hpp  vk_rhi.hpp  vk_rhi_input.hpp  vk_types.hpp
libs/vk_rhi/src/: vk_debug.cpp  vk_descriptors.cpp  vk_engine.cpp  vk_engine_cleanup.cpp  vk_engine_draw.cpp  vk_engine_init.cpp  vk_engine_input_handling.cpp  vk_framebuffer.cpp  vk_initializers.cpp  vk_mesh.cpp  vk_pipeline_builder.cpp  vk_render_pass_builder.cpp  vk_rhi.cpp  vk_rhi_cleanup.cpp  vk_rhi_draw.cpp  vk_rhi_environment_maps.cpp  vk_rhi_init.cpp  vk_rhi_input_handling.cpp  vk_types.cpp
libs/window/: CMakeLists.txt
libs/window/include/window/: window.hpp  window_events.hpp  window_impl_interface.hpp
libs/window/src/: window.cpp
(+66 files in other folders)
